--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,8 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 git clone https://github.com/Sscred4797/Dead-insidezxc.git
+> Cloning into `Spoon-Knife`...
+> remote: Counting objects: 10, done.
+> remote: Compressing objects: 100% (8/8), done.
+> remove: Total 10 (delta 1), reused 10 (delta 1)
+> Unpacking objects: 100% (10/10), done.
